monkey-c-formatter/tests/snapshots/snapshots__class_with_extends.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(\"class Foo extends Bar {}\")"
---
class Foo extends Bar {}
