monkey-c-formatter/tests/snapshots/snapshots__crlf_comments_do_not_keep_carriage_returns.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: formatted
---
class A {
    // line
    var x = 1; // trailing
    /* multi
       line */
}
