monkey-c-formatter/tests/snapshots/snapshots__dict_blank_line_between_entries.snap
---
source: tests/snapshots.rs
expression: "format(r#\"\nvar x = {\n    :a => 1,\n\n    :b => 2,\n};\n\"#.trim())"
---
var x = {
    :a => 1,

    :b => 2,
};
