monkey-c-formatter/tests/snapshots/snapshots__dict_entry_inline_trailing_comment.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(\"function f() { var x = {:a => 1, :b => 2, // note\\n}; }\")"
---
function f() {
    var x = {
        :a => 1,
        :b => 2, // note
    };
}
