monkey-c-formatter/tests/snapshots/snapshots__dict_no_trailing_comma_fits_inline.snap
---
source: tests/snapshots.rs
expression: "format(r#\"var d = {\"k\" => 1};\"#)"
---
var d = {"k" => 1};
