monkey-c-formatter/tests/snapshots/snapshots__dict_standalone_comment_between_entries.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(r#\"\nvar x = {\n    :a => 1,\n    // Some comment\n    :b => 2,\n};\n\"#.trim())"
---
var x = {
    :a => 1,
    // Some comment
    :b => 2,
};
