monkey-c-formatter/tests/snapshots/snapshots__dict_symbol_keys_inline.snap
---
source: tests/snapshots.rs
expression: "format(r#\"var d = {:title => \"George\", :name => \"Taylor\"};\"#)"
---
var d = {:title => "George", :name => "Taylor"};
