monkey-c-formatter/tests/snapshots/snapshots__dict_trailing_comma_forces_multiline.snap
---
source: tests/snapshots.rs
expression: "format(r#\"var d = {\"key\" => \"value\",};\"#)"
---
var d = {
    "key" => "value",
};
