monkey-c-formatter/tests/snapshots/snapshots__double_literal_with_extreme_negative_exponent.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(\"var x = 1.16183573193898954669148418496e-311d;\")"
---
var x = 1.16183573193898954669148418496e-311d;
