monkey-c-formatter/tests/snapshots/snapshots__else_if_chain.snap
---
source: tests/snapshots.rs
expression: "format(\"function f() { if (a) { return 1; } else if (b) { return 2; } else { return 3; } }\")"
---
function f() {
    if (a) {
        return 1;
    } else if (b) {
        return 2;
    } else {
        return 3;
    }
}
